<resources>
    <string name="app_name">Jewel_new</string>
    <string name="aadhar">Aadhar Number</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="welcome">Welcome to Jewel-O-Track</string>
    <string name="action_settings">Settings</string>
    <string name="report">Report</string>
    <string name="logout">LogOut</string>
    <string name="ijsc">IJSC Number</string>
    <string name="stat">Lost/Stolen</string>
    <string name="cmt">Enter the Jewel Particulars</string>
    <string name="submit">Submit</string>
    <string name="spinner_title">Select Category</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
