<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/image_shape"
            android:src="@drawable/app_logo"/>


        <EditText
            android:id="@+id/input_aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:elevation="4dp"
            android:hint="@string/aadhar"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shape"
            android:elevation="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:elevation="4dp"
            android:text="@string/signin"
            android:textColor="#fff"
            android:theme="@style/MyButton" />

    </LinearLayout>

</LinearLayout>
