<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:elevation="2dp"
                android:padding="5dp"
                android:text="Missing ? Complain here !"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/adhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:elevation="2dp"
                android:hint="@string/aadhar"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_ijsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_aadhar"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ijsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:elevation="2dp"
                android:hint="@string/ijsc"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_ijsc"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:gravity="center"
                android:prompt="@string/spinner_title"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_cmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_status"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cmt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:elevation="2dp"
                android:hint="@string/cmt"
                android:inputType="textMultiLine"
                android:padding="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/layout_cmt"
            android:background="@drawable/btn_shape"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:elevation="4dp"
            android:text="@string/submit"
            android:textColor="#fff"
            android:theme="@style/MyButton" />
    </LinearLayout>

</RelativeLayout>
